sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: ')' expected but '<-' found.
    For(i <- 0 to n-2)
          ^