sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var a: boolean=true;
  var n: Int=getNombreValeurs();
  while(a==true)
  {
    For(i <- 0 to n-2)
    {
      if(getValeur(i)>getValeur(i+1))
      {
        echange(i,i+1);
      }
    }
    For(i <- n-2 to 0)
    {
      if(getValeur(i)<getValeur(i+1))
      {
        echange(i,i+1);
      }
    }
  }
}